--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -5,16 +5,12 @@
   padding: 0 10px;
   max-width: 1150px;
 
-  @media (max-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr;
     margin: 0 21px;
     padding: 0;
   }
 
-  @media (max-width: $mobile-width) {
-    margin: 0 16px;
-    padding: 0;
-  }
 }
 
 footer h3 {
@@ -23,9 +19,8 @@ footer h3 {
   font-weight: 600;
   font-size: 18px;
   line-height: 32px;
-  color: $phone-black;
 
-  @media (max-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr;
   }
 }
