--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,12 +1,12 @@
 .page-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   align-items: center;
-  min-height: 100px;
+  justify-content: flex-start;
+  min-height: 50px;
 
-  @media (max-width: $tablet-width) {
-    justify-content: flex-start;
-    min-height: 50px;
+  @media (min-width: $desktop-width) {
+    justify-content: space-around;
+    min-height: 100px;
   }
 }
