--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -15,5 +15,5 @@ $nav-black: #2c2e3f;
 $phone-black: #141517;
 
 // Viewprts
-$tablet-width: 1023px;
-$mobile-width: 767px;
+$desktop-width: 992px;
+
