--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,5 +1,7 @@
 //Colors
 $basic-black: #000000;
+$text-black: #333333;
+$main-theme: #00bbf9;
 $basic-blue: #81b3d2;
 $basic-white: #ffffff;
 $basic-orange: #fe7865;
