--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,6 @@
 @import "blocks/footer.scss";
 @import "blocks/hero.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/logo.scss";
+@import "blocks/button.scss";
+@import "blocks/form.scss";
