--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -2,6 +2,9 @@
   display: flex;
   align-items: center;
   max-width: 1170px;
+  background-color: $main-theme;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   @media (max-width: $desktop-width) {
     position: absolute;
@@ -9,7 +12,6 @@
     right: 0;
     z-index: 2;
     display: block;
-    background-color: $basic-white;
     box-shadow: 0 5px 15px rgba(231, 229, 229, 0.9);
 
     &--closed .main-nav__list {
@@ -34,6 +36,7 @@
 
 .main-nav__list {
   display: flex;
+  background-color: $main-theme;
 
   @media (max-width: $desktop-width) {
     min-width: 320px;
@@ -53,7 +56,6 @@
     min-height: 28px;
     margin: 0;
     margin-bottom: 30px;
-    background-color: $mobile-menu-grey;
 
     &:hover {
       background-color: rgba(254, 120, 101, 0.2);
@@ -65,17 +67,16 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  color: $nav-black;
+  color: $basic-white;
+  padding-left: 24px;
 
   @media (max-width: $desktop-width) {
     display: block;
     width: 100%;
     min-height: 100%;
-    padding: 16px;
     font-weight: 600;
     font-size: 20px;
     line-height: 28px;
-    color: $mobile-menu-link;
   }
 
   &:hover {
@@ -85,14 +86,14 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 4px;
+  right: 26px;
   display: none;
   z-index: 2;
-  width: 72px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   padding: 0;
-  background-color: $basic-orange;
+  background-color: $basic-white;
   border: none;
   cursor: pointer;
 
@@ -104,12 +105,12 @@
 .main-nav--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: 15px;
-  right: 23px;
-  width: 23px;
+  top: 5px;
+  right: 0;
+  width: 30px;
   height: 2px;
-  background-color: $basic-white;
-  box-shadow: 0 9px 0 0 $basic-white, 0 18px 0 0 $basic-white;
+  background-color: $text-black;
+  box-shadow: 0 9px 0 0 $text-black, 0 18px 0 0 $text-black;
 }
 
 .main-nav--closed .main-nav__toggle {
@@ -123,7 +124,7 @@
 }
 
 .main-nav--opened .main-nav__toggle {
-  background-color: $basic-white;
+  background-color: $main-theme;
 
   &::before,
   &::after {
@@ -133,7 +134,8 @@
     right: 13px;
     width: 32px;
     height: 2px;
-    background-color: rgba(20, 21, 23, 0.2);
+    background-color: $basic-white;
+    opacity: 0.6;
   }
 
   &::before {
