--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,7 +3,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  min-height: 50px;
+  min-height: 37px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
 
   @media (min-width: $desktop-width) {
     justify-content: space-around;
