--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -15,9 +15,9 @@ html {
   overflow: hidden;
 }
 
-ul {
-  list-style: none;
-}
+// ul {
+//   list-style: none;
+// }
 
 a {
   text-decoration: none;
