Form top mibile styling

--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -39,9 +39,9 @@
   font-weight: 600;
   font-display: swap;
   src: local("Raleway"),
-    url("../../fonts/Raleway-Semi-bold.woff2") format("woff2"),
-    url("../../fonts/Raleway-Semi-bold.woff") format("woff"),
-    url("../../fonts/Raleway-Semi-bold.ttf") format("truetype");
+    url("../../fonts/Raleway-SemiBold.woff2") format("woff2"),
+    url("../../fonts/Raleway-SemiBold.woff") format("woff"),
+    url("../../fonts/Raleway-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
@@ -61,9 +61,9 @@
   font-weight: 800;
   font-display: swap;
   src: local("Raleway"),
-    url("../../fonts/Raleway-Extra-bold.woff2") format("woff2"),
-    url("../../fonts/Raleway-Extra-bold.woff") format("woff"),
-    url("../../fonts/Raleway-Extra-bold.ttf") format("truetype");
+    url("../../fonts/Raleway-ExtraBold.woff2") format("woff2"),
+    url("../../fonts/Raleway-ExtraBold.woff") format("woff"),
+    url("../../fonts/Raleway-ExtraBold.ttf") format("truetype");
 }
 
 @font-face {
