--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,4 +1,26 @@
 .form {
   display: flex;
   flex-direction: column;
+  padding: 16px;
+}
+
+.form input {
+  padding-bottom: 4px;
+  margin-bottom: 24px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  border: none;
+  border-bottom: 1px solid $basic-white;
+  background-color: inherit;
+  color: $basic-white;
+  opacity: 0.7;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &::placeholder {
+    color: $basic-white;
+  }
 }
