--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,4 +1,22 @@
 .hero {
-  background-color: $main-theme;
+  margin: 0 auto;
   border-radius: 20px;
+  max-width: 720px;
+  background: linear-gradient(98.54deg, #0068ec -1.05%, #00bbf9 101.72%);
+  box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+}
+
+.hero__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.hero__heading {
+  margin-bottom: 16px;
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 32px;
+  color: $basic-white;
 }
