--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: flex-start;
   min-height: 37px;
+  margin-bottom: 28px;
   box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
 
   @media (min-width: $desktop-width) {
