Form top mibile styling2

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,5 +1,6 @@
 .hero {
   margin: 0 auto;
+  margin-bottom: 40px;
   border-radius: 20px;
   max-width: 720px;
   background: linear-gradient(98.54deg, #0068ec -1.05%, #00bbf9 101.72%);
