--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,7 +7,7 @@ $basic-white: #ffffff;
 $basic-orange: #fe7865;
 $contacts-grey: #d7d9df;
 $mobile-menu-grey: #fbf8f8;
-$mobile-menu-link: #48494d;
+$main-section: #bcbbbb;
 $button-hover: #d1351f;
 
 //Text colors
