--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,17 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 275px;
+  min-width: 296px;
   height: 48px;
   padding: 12px 28px 12px 32px;
+  margin: 0 auto;
   box-sizing: border-box;
   background-color: $basic-white;
   border-radius: 5px;
   color: $text-black;
   border: none;
-
-  &--open-navigation-posotion {
-    margin-left: 24px;
-  }
 }
 
