--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,5 @@
 @import "blocks/form.scss";
 @import "blocks/page-main.scss";
 @import "blocks/main-section.scss";
+@import "blocks/vaccine.scss";
+@import "blocks/about.scss";
