--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,6 +6,9 @@
   height: 48px;
   padding: 12px 28px 12px 32px;
   margin: 0 auto;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
   box-sizing: border-box;
   background-color: $basic-white;
   border-radius: 5px;
