--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,7 +3,7 @@
   margin-bottom: 40px;
   border-radius: 20px;
   max-width: 720px;
-  background: linear-gradient(98.54deg, #0068ec -1.05%, #00bbf9 101.72%);
+  background: $gradient;
   box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
 }
 
