--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -1,10 +1,36 @@
 .main-section__heading-wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   padding-left: 8px;
-  min-height: 112px;
-  border: 2px solid transparent;
-  border-image: linear-gradient(98.54deg, #0068ec -1.05%, #00bbf9 101.72%);
-  border-image-slice: 1;
-  background-color: $main-section;
+  margin-bottom: 25px;
+  color: $basic-white;
+  box-sizing: border-box;
+  border-radius: 5px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    left: -2px;
+    right: -2px;
+    background: $gradient;
+    border-radius: 5px;
+    z-index: -1;
+  }
+
+  &--bcg-vaccine {
+    min-height: 112px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
+      url("../../img/vaccine.jpg") no-repeat;
+    background-size: 100% 100%;
+  }
+
+  &--bcg-about {
+    min-height: 48px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
+      url("../../img/abuot.jpg") no-repeat;
+    background-size: 100% 100%;
+  }
 }
