--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,14 +1,17 @@
 //Colors
 $basic-black: #000000;
 $text-black: #333333;
-$main-theme: #00bbf9;
-$basic-blue: #81b3d2;
+$vaccine1: #006dd1;
+$vaccine2: #004585;
+$vaccine3: #000911;
+$vaccine-border: #111111;
 $basic-white: #ffffff;
 $basic-orange: #fe7865;
 $contacts-grey: #d7d9df;
 $mobile-menu-grey: #fbf8f8;
 $main-section: #bcbbbb;
 $button-hover: #d1351f;
+$gradient: linear-gradient(98.54deg, #0068ec -1.05%, #00bbf9 101.72%);
 
 //Text colors
 $nav-black: #2c2e3f;
@@ -18,4 +21,3 @@ $phone-black: #141517;
 
 // Viewprts
 $desktop-width: 992px;
-
