--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,4 @@
 @import "blocks/main-section.scss";
 @import "blocks/vaccine.scss";
 @import "blocks/about.scss";
+@import "blocks/achievements.scss";
