--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -14,6 +14,11 @@
   font-size: 32px;
   line-height: 40px;
   text-align: center;
+
+  & span {
+    font-size: 40px;
+    line-height: 48px;
+  }
 }
 
 .about__info {
@@ -24,10 +29,12 @@
   line-height: 24px;
 }
 
-.about__more-wrapper {
-  border-left: 0.5px dashed $vaccine-border;
-}
+// .about__more-wrapper {
+//   border-left: 0.5px dashed $vaccine-border;
+// }
 
-.about__more-first {
-  margin-bottom: 32px;
+.about__more {
+  &--first {
+    margin-bottom: 32px;
+  }
 }
