--- a/source/sass/blocks/vaccine.scss
+++ b/source/sass/blocks/vaccine.scss
@@ -1,6 +1,5 @@
 .vaccine {
   border-left: 0.5px dashed $vaccine-border;
-  margin-bottom: 64px;
 
   &::before {
     display: flex;
@@ -12,7 +11,7 @@
 .vaccine__wrapper {
   box-sizing: border-box;
   padding-left: 8px;
-  margin-bottom: 60px;
+  margin-bottom: 48px;
 }
 
 .vaccine__wrapper:last-child {
@@ -60,7 +59,7 @@
   font-size: 48px;
   line-height: 56px;
   color: $vaccine1;
-  background: $gradient;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background: $gradient; //Gradient color
+  background-clip: text; //Gradient color
+  -webkit-text-fill-color: transparent; //Gradient color
 }
