Main mobile currency styling

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,16 +1,22 @@
 //Colors
+$basic-white: #ffffff;
 $basic-black: #000000;
 $text-black: #333333;
+$text-black2: #222222;
 $vaccine1: #006dd1;
 $vaccine2: #004585;
 $vaccine3: #000911;
 $vaccine-border: #111111;
-$basic-white: #ffffff;
+
+$currencyPlus: #19c576;
+$currencyMinus: #c51919;
+
 $basic-orange: #fe7865;
 $contacts-grey: #d7d9df;
 $mobile-menu-grey: #fbf8f8;
 $main-section: #bcbbbb;
 $button-hover: #d1351f;
+
 $gradient: linear-gradient(98.54deg, #0068ec -1.05%, #00bbf9 101.72%);
 
 //Text colors
