--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,4 @@
 @import "blocks/vaccine.scss";
 @import "blocks/about.scss";
 @import "blocks/achievements.scss";
+@import "blocks/currency.scss";
