--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -12,7 +12,12 @@
   box-sizing: border-box;
   border-radius: 5px;
 
-  &::before { //Gradient
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &::before {
+    //Gradient
     content: "";
     position: absolute;
     top: -2px;
@@ -26,15 +31,13 @@
 
   &--bcg-vaccine {
     min-height: 112px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
-      url("../../img/vaccine.jpg") no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/vaccine.jpg") no-repeat;
     background-size: 100% 100%;
   }
 
   &--bcg-about {
     min-height: 48px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
-      url("../../img/abuot.jpg") no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/abuot.jpg") no-repeat;
     background-size: 100% 100%;
   }
 
@@ -47,8 +50,13 @@
 
   &--bcg-currency {
     min-height: 48px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
-      url("../../img/currency.jpg") no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/currency.jpg") no-repeat;
+    background-size: 100% 100%;
+  }
+
+  &--bcg-to-do {
+    min-height: 80px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/to-do.jpg") no-repeat;
     background-size: 100% 100%;
   }
 }
