--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,9 @@ $vaccine1: #006dd1;
 $vaccine2: #004585;
 $vaccine3: #000911;
 $vaccine-border: #111111;
+$block-border: #00bbf9;
+$calculate-input-color: #a7a7a7;
+$calculate-input-border: #e8e8e8;
 
 $currencyPlus: #19c576;
 $currencyMinus: #c51919;
