--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,30 +1,7 @@
 .footer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 0 auto;
-  padding: 0 10px;
-  max-width: 1150px;
-
-  @media (min-width: $desktop-width) {
-    grid-template-columns: 1fr 1fr;
-    margin: 0 21px;
-    padding: 0;
-  }
-
-}
-
-footer h3 {
-  margin: 0;
-  margin-bottom: 20px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 32px;
-
-  @media (min-width: $desktop-width) {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-.footer p {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-right: 24px;
+  margin-left: 24px;
 }
