--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -2,3 +2,15 @@
   display: flex;
   align-items: center;
 }
+
+.logo__name {
+  margin-left: 8px;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 17px;
+
+  &--fs22-lh24 {
+    font-size: 22px;
+    line-height: 24px;
+  }
+}
