--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -59,4 +59,16 @@
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/to-do.jpg") no-repeat;
     background-size: 100% 100%;
   }
+
+  &--bcg-how-it-work {
+    min-height: 48px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/how-it-work.jpg") no-repeat;
+    background-size: 100% 100%;
+  }
+
+  &--bcg-calculate {
+    min-height: 80px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/calculate.jpg") no-repeat;
+    background-size: 100% 100%;
+  }
 }
