--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -22,13 +22,20 @@ h3 {
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 a {
+  color: $text-black;
   text-decoration: none;
 }
 
 p {
   margin: 0;
+}
+
+input {
+  font-family: "Raleway", "Arial", sans-serif;
 }
