--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,7 @@
 @import "blocks/achievements.scss";
 @import "blocks/currency.scss";
 @import "blocks/to-do.scss";
+@import "blocks/how-it-work.scss";
+@import "blocks/calculate.scss";
+@import "blocks/copyright.scss";
+@import "blocks/terms-and-policy.scss";
