--- a/source/sass/blocks/achievements.scss
+++ b/source/sass/blocks/achievements.scss
@@ -7,6 +7,10 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
 
+  & img {
+    width: 100%;
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
