--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -21,6 +21,11 @@
     &--closed .main-nav__button {
       display: none;
     }
+
+    &--opened .main-nav__button {
+      margin-left: 24px;
+      max-width: 275px;
+    }
   }
 }
 
@@ -40,9 +45,8 @@
 
   @media (max-width: $desktop-width) {
     min-width: 320px;
-    min-height: 434px;
     display: block;
-    margin: 0;
+    margin-top: 80px;
     padding: 0;
   }
 }
@@ -124,16 +128,17 @@
 }
 
 .main-nav--opened .main-nav__toggle {
-  background: $gradient;
+  margin-top: 30px;
+  background: initial; //inherit for development
 
   &::before,
   &::after {
     content: "";
     position: absolute;
-    top: 25px;
-    right: 13px;
+    top: 15px;
+    right: -1px;
     width: 32px;
-    height: 2px;
+    height: 5px;
     background-color: $basic-white;
     opacity: 0.6;
   }
