--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,6 +1,10 @@
 .logo {
   display: flex;
   align-items: center;
+
+  @media (min-width: $desktop-width) {
+    margin-right: 80px;
+  }
 }
 
 .logo__name {
@@ -12,5 +16,17 @@
   &--fs22-lh24 {
     font-size: 22px;
     line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 22px;
+    line-height: 24px;
+  }
+}
+
+.logo__img {
+  @media (min-width: $desktop-width) {
+    width: 54px;
+    height: 54px;
   }
 }
