--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,31 +1,48 @@
 .main-nav {
-  display: flex;
-  align-items: center;
-  max-width: 1170px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
   background: $gradient;
   padding-top: 30px;
   padding-bottom: 30px;
+  z-index: 2;
+  box-shadow: 0 5px 15px rgba(231, 229, 229, 0.9);
 
-  @media (max-width: $desktop-width) {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 2;
-    display: block;
-    box-shadow: 0 5px 15px rgba(231, 229, 229, 0.9);
+  &--closed .main-nav__list {
+    display: none;
 
-    &--closed .main-nav__list {
-      display: none;
+    @media (min-width: $desktop-width) {
+      display: flex;
     }
+  }
 
-    &--closed .main-nav__button {
-      display: none;
-    }
+  &--closed .main-nav__button {
+    display: none;
 
-    &--opened .main-nav__button {
-      margin-left: 24px;
-      max-width: 275px;
+    @media (min-width: $desktop-width) {
+      display: flex;
+      min-width: 250px;
+      margin-left: 15px;
+      padding: 15px 24px;
+      border: 2px solid $text-black;
+      font-size: 16px;
     }
+  }
+
+  &--opened .main-nav__button {
+    margin-left: 24px;
+    max-width: 275px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background: none;
+    box-shadow: none;
   }
 }
 
@@ -33,54 +50,60 @@
   display: none;
 }
 
-.main-nav--nojs .main-nav__list {
-  @media (max-width: $desktop-width) {
-    display: block;
-  }
-}
+// .main-nav--nojs .main-nav__list {
+//   @media (min-width: $desktop-width) {
+
+//   }
+// }
 
 .main-nav__list {
-  display: flex;
   background: $gradient;
+  min-width: 320px;
+  margin-top: 80px;
+  padding: 0;
 
-  @media (max-width: $desktop-width) {
-    min-width: 320px;
-    display: block;
-    margin-top: 80px;
-    padding: 0;
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 0;
+    background: none;
   }
 }
 
 .main-nav__item {
-  margin: 0 20px;
   cursor: pointer;
+  width: 100%;
+  min-height: 28px;
+  margin-bottom: 30px;
 
-  @media (max-width: $desktop-width) {
-    width: 100%;
-    min-height: 28px;
-    margin: 0;
-    margin-bottom: 30px;
+  @media (min-width: $desktop-width) {
+    width: initial;
+    margin-right: 50px;
+    margin-bottom: 0;
 
-    &:hover {
-      background-color: rgba(254, 120, 101, 0.2);
+    &:last-child {
+      margin-right: 0;
     }
+  }
+
+  &:hover {
+    background-color: rgba(254, 120, 101, 0.2);
   }
 }
 
 .main-nav__item a {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
   color: $basic-white;
   padding-left: 24px;
 
-  @media (max-width: $desktop-width) {
-    display: block;
+  @media (min-width: $desktop-width) {
+    padding: 0;
     width: 100%;
     min-height: 100%;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 28px;
+    color: $text-black;
   }
 
   &:hover {
@@ -92,7 +115,7 @@
   position: absolute;
   top: 4px;
   right: 26px;
-  display: none;
+  display: block;
   z-index: 2;
   width: 30px;
   height: 30px;
@@ -101,8 +124,8 @@
   border: none;
   cursor: pointer;
 
-  @media (max-width: $desktop-width) {
-    display: block;
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
