--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,4 +1,9 @@
 .page-main {
-  margin-left: 24px;
   margin-right: 24px;
+  margin-left: 24px;
+
+  @media (min-width: $desktop-width) {
+    margin-right: 64px;
+    margin-left: 64px;
+  }
 }
