--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,6 +3,26 @@
   flex-direction: column;
   padding: 16px;
 
+  &--top {
+    & .form__wrapper {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 16px;
+    }
+
+    @media (min-width: $desktop-width) {
+      justify-content: space-between;
+      padding: 24px;
+      padding-left: 32px;
+
+      & .form__wrapper {
+        display: flex;
+        flex-direction: column;
+        max-width: 303px;
+      }
+    }
+  }
+
   &--bottom {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -21,6 +41,20 @@
 
   &--center {
     text-align: center;
+  }
+
+  &--desktop {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    &--mobile {
+      display: none;
+    }
+
+    &--desktop {
+      display: inline-block;
+    }
   }
 }
 
