--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -5,6 +5,12 @@
   max-width: 720px;
   background: $gradient;
   box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    max-width: none;
+    max-height: 439px;
+  }
 }
 
 .hero__img img {
@@ -12,4 +18,9 @@
   height: 100%;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
+
+  @media (min-width: $desktop-width) {
+    width: 640px;
+    border-radius: 20px 0 0 20px;
+  }
 }
