--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -103,6 +103,9 @@
     padding: 0;
     width: 100%;
     min-height: 100%;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
     color: $text-black;
   }
 
