--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -9,11 +9,13 @@
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
 
   @media (min-width: $desktop-width) {
+    box-sizing: border-box;
     justify-content: space-between;
+    max-width: 1440px;
     min-height: 94px;
-    margin-right: 64px;
-    margin-left: 64px;
-    padding-left: 0;
+    margin: 0 auto;
+    padding-right: 64px;
+    padding-left: 64px;
     box-shadow: none;
   }
 }
