--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -3,7 +3,11 @@
   margin-left: 24px;
 
   @media (min-width: $desktop-width) {
-    margin-right: 64px;
-    margin-left: 64px;
+    box-sizing: border-box;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-right: 64px;
+    padding-left: 64px;
+
   }
 }
