--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -4,4 +4,16 @@
   gap: 24px;
   margin-right: 24px;
   margin-left: 24px;
+
+  @media (min-width: $desktop-width) {
+    box-sizing: border-box;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+    min-height: 156px;
+    margin: 0 auto;
+    padding-right: 64px;
+    padding-left: 64px;
+  }
 }
