--- a/source/sass/blocks/terms-and-policy.scss
+++ b/source/sass/blocks/terms-and-policy.scss
@@ -4,4 +4,18 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+    margin-left: 32px;
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
+
+.terms-and-policy__list {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    align-items: center;
+  }
 }
