Adaptive bottom-form

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -17,5 +17,10 @@
     &--desktop-w275 {
       width: 275px;
     }
+
+    &--desktop-w303-center {
+      width: 303px;
+      margin: 0 auto;
+    }
   }
 }
