--- a/source/sass/blocks/achievements.scss
+++ b/source/sass/blocks/achievements.scss
@@ -1,5 +1,11 @@
 .achievements {
   margin-bottom: 56px;
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 32px;
+  }
 }
 
 .achievements__img {
