--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -7,6 +7,7 @@
   box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
 
   @media (min-width: $desktop-width) {
+    grid-column: span 3;
     display: flex;
     max-width: none;
     max-height: 439px;
