--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -3,11 +3,13 @@
   margin-left: 24px;
 
   @media (min-width: $desktop-width) {
+    // display: grid;
+    // grid-template-columns: repeat(3, 1fr);
+    // column-gap: 32px;
     box-sizing: border-box;
     max-width: 1440px;
     margin: 0 auto;
     padding-right: 64px;
     padding-left: 64px;
-
   }
 }
