--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,6 +10,7 @@ $vaccine-border: #111111;
 $block-border: #00bbf9;
 $calculate-input-color: #a7a7a7;
 $calculate-input-border: #e8e8e8;
+$how-it-workBackground: #929193;
 
 $currencyPlus: #19c576;
 $currencyMinus: #c51919;
