--- a/source/sass/blocks/achievements.scss
+++ b/source/sass/blocks/achievements.scss
@@ -9,13 +9,11 @@
 }
 
 .achievements__img {
+  display: flex;
+  justify-content: center;
   margin-bottom: 32px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
-
-  & img {
-    width: 100%;
-  }
 
   &:last-child {
     margin-bottom: 0;
