--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -3,6 +3,14 @@
 
   @media (min-width: $desktop-width) {
     grid-column: span 3;
+
+    &--desktop-bcg {
+      padding: 64px 120px 80px;
+      background: url("../../img/how-it-workBackground.jpg") no-repeat;
+      background-color: $how-it-workBackground;
+      background-size: cover;
+      border-radius: 20px;
+    }
   }
 }
 
@@ -66,20 +74,35 @@
 
   &--bcg-how-it-work {
     min-height: 48px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/how-it-work.jpg") no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
+      url("../../img/how-it-work.jpg") no-repeat;
     background-size: cover;
   }
 
   &--bcg-calculate {
     min-height: 80px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../../img/calculate.jpg") no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
+      url("../../img/calculate.jpg") no-repeat;
     background-size: cover;
   }
 
   @media (min-width: $desktop-width) {
+    box-sizing: border-box;
     display: inline-flex;
     min-height: 64px;
     padding: 8px;
     background: none;
+
+    &--desktop-none {
+      display: none;
+    }
+  }
+}
+
+.main-section__heading {
+  @media (min-width: $desktop-width) {
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 48px;
   }
 }
