Button A hover active styling

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -12,6 +12,8 @@ $calculate-input-color: #a7a7a7;
 $calculate-input-border: #e8e8e8;
 $how-it-workBackground: #929193;
 
+$nav-hover: #00b6f8;
+
 $currencyPlus: #19c576;
 $currencyMinus: #c51919;
 
