--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   height: 48px;
   padding: 12px 28px 12px 32px;
+  font-family: "Raleway", "Arial", sans-serif;
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
@@ -12,6 +13,37 @@
   border-radius: 5px;
   color: $text-black;
   border: none;
+  cursor: pointer;
+
+  &:hover {
+    background: $gradient;
+    color: $basic-white;
+    outline: 3px solid $text-black;
+
+    & path {
+      fill: $basic-white;
+    }
+  }
+
+  &:active {
+    padding-bottom: 18px;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.5);
+    outline: none;
+  }
+
+  &--main-nav {
+    font-size: 16px;
+
+    &:hover {
+      background: $gradient;
+      color: $basic-white;
+      outline: none;
+
+      & path {
+        fill: $basic-white;
+      }
+    }
+  }
 
   @media (min-width: $desktop-width) {
     &--desktop-w275 {
