--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -72,10 +72,15 @@
 }
 
 .main-nav__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   width: 100%;
   min-height: 28px;
   margin-bottom: 30px;
+  padding: 5px;
+  box-sizing: border-box;
 
   @media (min-width: $desktop-width) {
     width: initial;
@@ -88,7 +93,17 @@
   }
 
   &:hover {
-    background-color: rgba(254, 120, 101, 0.2);
+    background-color: $vaccine1;
+    border-radius: 5px;
+
+    & a {
+      color: $basic-white;
+    }
+  }
+
+  &:active {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    opacity: 0.8;
   }
 }
 
@@ -107,10 +122,6 @@
     font-size: 16px;
     line-height: 24px;
     color: $text-black;
-  }
-
-  &:hover {
-    color: $basic-orange;
   }
 }
 
