--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,3 +25,4 @@
 @import "blocks/calculate.scss";
 @import "blocks/copyright.scss";
 @import "blocks/terms-and-policy.scss";
+@import "blocks/conditions-politics.scss";
