--- a/source/sass/blocks/terms-and-policy.scss
+++ b/source/sass/blocks/terms-and-policy.scss
@@ -19,3 +19,13 @@
     align-items: center;
   }
 }
+
+.terms-and-policy__item a {
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:active {
+    opacity: 0.8;
+  }
+}
