--- a/source/sass/blocks/currency.scss
+++ b/source/sass/blocks/currency.scss
@@ -1,11 +1,12 @@
-.currency__wrapper {
+.currency {
   @media (min-width: $desktop-width) {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
-.currency {
+.currency__wrapper {
   display: flex;
   justify-content: space-between;
   padding: 24px;
@@ -14,7 +15,7 @@
   border-radius: 5px;
 
   @media (min-width: $desktop-width) {
-    width: 25%;
+    width: 304px;
     box-sizing: border-box;
   }
 }
@@ -74,4 +75,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
+}
+
+.currency__table {
+  width: 100%;
 }
