--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -100,6 +100,9 @@
 }
 
 .main-section__heading {
+  font-size: 24px;
+  line-height: 32px;
+
   @media (min-width: $desktop-width) {
     font-weight: 800;
     font-size: 40px;
