--- a/source/sass/blocks/vaccine.scss
+++ b/source/sass/blocks/vaccine.scss
@@ -1,10 +1,19 @@
 .vaccine {
-  border-left: 0.5px dashed $vaccine-border;
+  display: flex;
+}
 
+.vaccine__bar {
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
+.vaccine__groupe {
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 32px;
+    width: 100%;
     border-left: none;
   }
 
