--- a/source/sass/blocks/calculate.scss
+++ b/source/sass/blocks/calculate.scss
@@ -61,6 +61,9 @@
   background-color: inherit;
   color: $calculate-input-color;
 
+  @media (min-width: $desktop-width) {
+    max-width: 400px;
+  }
 
   &::placeholder {
     color: $calculate-input-color;
@@ -74,6 +77,11 @@
   background: url("../../img/calculateProgress.png") no-repeat;
   background-size: contain;
   border-bottom: 1px dashed $vaccine-border;
+
+  @media (min-width: $desktop-width) {
+    background: url("../../img/calculateProgressDesktop.png") no-repeat;
+    background-size: contain;
+  }
 }
 
 .calculate__img {
