--- a/source/sass/blocks/terms-and-policy.scss
+++ b/source/sass/blocks/terms-and-policy.scss
@@ -5,6 +5,11 @@
     margin-bottom: 0;
   }
 
+  &--current a {
+    text-decoration: underline;
+    color: $calculate-input-color;
+  }
+
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
     margin-left: 32px;
