--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -3,6 +3,7 @@
 
   @media (min-width: $desktop-width) {
     grid-column: span 3;
+    margin-bottom: 80px;
 
     &--desktop-bcg {
       padding: 64px 120px 80px;
@@ -94,6 +95,7 @@
     display: inline-flex;
     min-height: 64px;
     padding: 8px;
+    margin-bottom: 50px;
     background: none;
 
     &--desktop-none {
