--- a/source/sass/blocks/to-do.scss
+++ b/source/sass/blocks/to-do.scss
@@ -3,16 +3,25 @@
   flex-direction: column;
   margin-bottom: 40px;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 32px;
+    margin-bottom: 100px;
   }
 }
 
 .to-do img {
   align-self: center;
   margin-bottom: 8px;
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto;
+  }
 }
 
 .to-do__title {
