--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -12,6 +12,9 @@ $calculate-input-color: #a7a7a7;
 $calculate-input-border: #e8e8e8;
 $how-it-workBackground: #929193;
 
+$dark: #393939;
+$blue: #0aa7ff;
+
 $nav-hover: #00b6f8;
 
 $currencyPlus: #19c576;
