--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,6 +3,7 @@
   margin-bottom: 40px;
   border-radius: 20px;
   max-width: 720px;
+  min-height: 705px;
   background: $gradient;
   box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
 
@@ -10,7 +11,7 @@
     grid-column: span 3;
     display: flex;
     max-width: none;
-    max-height: 439px;
+    min-height: 488px;
   }
 }
 
