--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,7 +4,7 @@
   padding: 16px;
 
   &--top {
-    min-height: 430px;
+    // min-height: 430px;
     justify-content: space-between;
 
     & .form__wrapper {
@@ -28,7 +28,7 @@
 
   &--bottom {
     justify-content: space-between;
-    min-height: 630px;
+    // min-height: 630px;
     padding-top: 32px;
     padding-bottom: 32px;
     margin-bottom: 24px;
