--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "global/variables.scss";
 @import "global/global.scss";
 @import "global/intlTelInput.scss";
+@import "global/animation.scss";
 
 
 // Blocks
