--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -11,6 +11,8 @@ $block-border: #00bbf9;
 $calculate-input-color: #a7a7a7;
 $calculate-input-border: #e8e8e8;
 $how-it-workBackground: #929193;
+$button-vaccine: #0068ec ;
+
 
 $dark: #393939;
 $blue: #0aa7ff;
