--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -45,6 +45,20 @@
     }
   }
 
+  &--vaccine{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 328px;
+    padding: 12px;
+    margin: 0 auto;
+    color: $basic-white;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    background-color: $button-vaccine;
+  }
+
   @media (min-width: $desktop-width) {
     &--desktop-w275 {
       width: 275px;
