--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -89,9 +89,13 @@
   }
 }
 
-.form input {
-  padding-bottom: 4px;
+.inputWrapper {
   margin-bottom: 24px;
+}
+
+.form input {
+  box-sizing: border-box;
+  width: 100%;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
