--- a/source/sass/global/intlTelInput.scss
+++ b/source/sass/global/intlTelInput.scss
@@ -19,13 +19,13 @@
   z-index: 0;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  padding-right: 36px;
+  padding-right: 65px;
   margin-right: 0;
 }
 .iti__flag-container {
   position: absolute;
-  top: 3px;
-  bottom: 25px;
+  top: 0;
+  bottom: 0;
   right: 0;
   padding: 1px;
 }
@@ -43,11 +43,11 @@
   height: 0;
   border-left: 3px solid transparent;
   border-right: 3px solid transparent;
-  border-top: 4px solid #555;
+  border-top: 4px solid $basic-white;
 }
 .iti__arrow--up {
   border-top: none;
-  border-bottom: 4px solid #555;
+  border-bottom: 4px solid $basic-white;
 }
 .iti__country-list {
   position: absolute;
