--- a/source/sass/global/intlTelInput.scss
+++ b/source/sass/global/intlTelInput.scss
@@ -1242,5 +1242,11 @@
 }
 
 .error {
-  color: tomato;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+  background-color: #ff8900;
+  color: white;
+  border-radius: 5px;
 }
