--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -107,10 +107,12 @@
 .main-section__heading {
   font-size: 24px;
   line-height: 32px;
+  text-shadow: 0px 0px 15px #000000;
 
   @media (min-width: $desktop-width) {
     font-weight: 800;
     font-size: 40px;
     line-height: 48px;
+    text-shadow: none;
   }
 }
