--- a/source/sass/blocks/vaccine.scss
+++ b/source/sass/blocks/vaccine.scss
@@ -15,7 +15,7 @@
 }
 
 .vaccine__big--selected {
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 104, 236, 0.75);
   border-radius: 10px;
 }
 
@@ -52,6 +52,7 @@
   flex-direction: column;
   justify-content: space-around;
   flex-grow: 1;
+  margin-left: 5px;
 
   @media (min-width: $desktop-width) {
     display: grid;
