--- a/source/sass/blocks/calculate.scss
+++ b/source/sass/blocks/calculate.scss
@@ -13,6 +13,8 @@
   &--about {
     @media (min-width: $desktop-width) {
       grid-column: span 2;
+      margin-right: 5px;
+      margin-left: 5px;
     }
   }
 
