--- a/source/sass/blocks/to-do.scss
+++ b/source/sass/blocks/to-do.scss
@@ -12,6 +12,11 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 32px;
     margin-bottom: 100px;
+
+    & p {
+      margin-right: 5px;
+      margin-left: 5px;
+    }
   }
 }
 
@@ -33,4 +38,9 @@
   background: $gradient; //Gradient color
   background-clip: text; //Gradient color
   -webkit-text-fill-color: transparent; //Gradient color
+
+  @media (min-width: $desktop-width) {
+    margin-right: 5px;
+    margin-left: 5px;
+  }
 }
