--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -7,9 +7,10 @@
     // grid-template-columns: repeat(3, 1fr);
     // column-gap: 32px;
     box-sizing: border-box;
-    max-width: 1440px;
+    max-width: 1312px;
     margin: 0 auto;
-    padding-right: 64px;
-    padding-left: 64px;
+    background-image: url(../../img/backgroundLines.png);
+    background-size: cover;
+    border-radius: 20px;
   }
 }
