--- a/source/sass/blocks/vaccine.scss
+++ b/source/sass/blocks/vaccine.scss
@@ -10,6 +10,8 @@
   cursor: pointer;
 
   @media (min-width: $desktop-width) {
+    margin-left: 3px;
+    max-width: 384px;
     display: flex;
   }
 }
